--- a/src/app.html
+++ b/src/app.html
@@ -1,32 +1,19 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<link href="styles.css" type="text/html" />
+		<link rel="stylesheet" href="/node_modules/colors.css/css/colors.css">
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="https://fav.farm/🍆"  />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link
-	rel="preload"
-	href="%sveltekit.assets%/fonts/DMSans-VariableFont_opsz,wght.ttf"
-	as="font"
-	type="font/ttf"
-	crossorigin
-/>
-<link
-	rel="preload"
-	href="%sveltekit.assets%/fonts/DMSans-Italic-VariableFont_opsz,wght.ttf"
-	as="font"
-	type="font/ttf"
-	crossorigin
-/>
-<link
-	rel="preload"
-	href="%sveltekit.assets%/fonts/DMSerifDisplay-Regular.ttf"
-	as="font"
-	type="font/ttf"
-	crossorigin
-/>
 		%sveltekit.head%
+		<style>
+			html {
+				background-color: silver
+			}
+			p {
+				color: navy
+			}
+		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton" class="h-full overflow-hidden">
 		<div style="display: contents">%sveltekit.body%</div>
