--- a/src/app.html
+++ b/src/app.html
@@ -1,21 +1,14 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="/src/lib/app.css">
 		<link rel="stylesheet" href="/node_modules/colors.css/css/colors.css">
 		<meta charset="utf-8" />
 		<link rel="icon" href="https://fav.farm/🍆"  />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
-		<style>
-			html {
-				background-color: silver
-			}
-			p {
-				color: navy
-			}
-		</style>
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="skeleton" class="h-full overflow-hidden">
+	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
