--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="static/app.css">
+		<link rel="stylesheet" href="$css">
 		<link rel="stylesheet" href="/node_modules/colors.css/css/colors.css">
 		<meta charset="utf-8" />
 		<link rel="icon" href="https://fav.farm/🍆"  />
