--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="app.css">
 		<link rel="stylesheet" href="/node_modules/colors.css/css/colors.css">
 		<meta charset="utf-8" />
-		<link rel="icon" href="https://fav.farm/🍆"  />
+		<link rel="icon" href="https://fav.farm/🚂"  />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
